Implementação inicial do editar pastas.

--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -41,6 +41,17 @@
         
       </ul>
     </dd>
+    <dd>
+      <ul id="mainMenu">
+      
+          <li class="add-folder">
+            <a href="/Mail/Folder/New" class="menuLink">
+              <span>Adicionar Pasta</span>
+              <div class="icon icon-add-folder"></div>
+            </a>
+          </li>
+      </ul>
+    </dd>
     <% } %>
   </dl>
 
