--- a/templates/mail/editFolderTemplate.html
+++ b/templates/mail/editFolderTemplate.html
@@ -1,10 +1,13 @@
-<h2 class="ellipsis50">Editar Pasta</h2>
+<h2 class="ellipsis50"><%=title%></h2>
 <article id="wrapperDetail" class="container">
 	<div id="scrollerDetail">
 		<form id="changePassword">
 			<ol>
 				<li>
-					<input type="text" name="folderName" id="folderName" placeholder="Nome da Pasta" />
+					<input type="text" name="folderName" id="folderName" placeholder="Nome da Pasta" value="<%=folderName%>" />
+					<input type="hidden" name="folderID" id="folderID" value="<%=folderID%>" />
+					<input type="hidden" name="parentFolderID" id="parentFolderID" value="<%=parentFolderID%>" />
+					<input type="hidden" name="folderAction" id="folderAction" value="<%=folderAction%>" />
 				</li>
 			</ol>
 		</form>
