Closes #1 e também Closes #2 e Closes #3.

--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -45,7 +45,7 @@
       <ul id="mainMenu">
       
           <li class="add-folder">
-            <a href="/Mail/Folder/New/INBOX" class="menuLink">
+            <a href="/Mail/AddFolder/INBOX#" class="menuLink">
               <span>Adicionar Pasta</span>
               <div class="icon icon-add-folder"></div>
             </a>
