--- a/templates/mail/messagesListTemplate.html
+++ b/templates/mail/messagesListTemplate.html
@@ -13,7 +13,7 @@
 	</ul>
 	<div id="pullUp">
 	  <span class="pullUpIcon"></span><span class="pullUpLabel">
-	  <% if (!collection.length) { %>Esta pasta está vazia.<% } else { %>Puxe para cima para carregar mais...<% } %></span>
+	  <% if (!collection.length) { %>Esta pasta não contém mensagens.<% } else { %>Puxe para cima para carregar mais...<% } %></span>
 	</div>
 	
   </div>
