--- a/css/estilo.css
+++ b/css/estilo.css
@@ -126,8 +126,8 @@ body #menu dl dd ul#myFolders li { border-bottom: 1px #EFEFEF solid; }
 /*body #menu dl dd ul#myFolders li a { height: 32px; text-decoration: none; }*/
 body #menu dl dd ul#myFolders { background-color: #FFF; }
 body #menu dl dd ul#myFolders li a { height: 30px; color: #333333; margin-right: 10px; }
-body #menu dl dd ul#myFolders li a .icon { width: 30px; height: 30px; }
-body #menu dl dd ul#myFolders li a span { line-height: 30px; vertical-align: top; margin-left: 35px; float: left; width: 90%; }
+body #menu dl dd ul#myFolders li a .icon { width: 30px; height: 30px; margin-left: 5px; }
+body #menu dl dd ul#myFolders li a span { line-height: 30px; vertical-align: top; margin-left: 40px; float: left; width: 90%; }
 body #menu dl dd ul#myFolders li a span .badge.badge-info { float: right; }
 .badge-subfolders { 
   float: right; 
@@ -174,6 +174,10 @@ body #menu dl dd ul#myFolders li a span .badge.badge-info { float: right; }
 
 .context-add-folder {
   background: url("../imgs/icon-adicionar-pasta-30x30.png") no-repeat scroll center center;
+}
+
+.context-rename-folder {
+  background: url("../imgs/icon-renomear-pasta-30x30.png") no-repeat scroll center center;
 }
 
 .context-del-folder {
