--- a/templates/mail/detailMessageTemplate.html
+++ b/templates/mail/detailMessageTemplate.html
@@ -1,3 +1,4 @@
+<% if (messages.length != 0) { %>
 <% _.each(messages, function(message){ %>
 <h2 class="ellipsis50"><span class="subtitle-detail-text"><%=message.getTimeAgo()%></span><%= message.get("msgSubject") %></h2>
 <article id="wrapperDetail" class="container">
@@ -114,3 +115,16 @@
   </div>
 </article>
 <% }); %>
+<% } else { %>
+<h2 class="ellipsis50"><span class="subtitle-detail-text"></span>&nbsp;</h2>
+<article id="wrapperDetail" class="container">
+  <div id="scrollerDetail">
+    <br><br>
+    <center>
+      <span>
+        Nenhuma mensagem foi selecionada...
+      </span>
+    </center>
+  </div>
+</article>
+<% } %>
