--- a/templates/mail/foldersMenuListTemplate.html
+++ b/templates/mail/foldersMenuListTemplate.html
@@ -1,7 +1,7 @@
 <% _.each(folders, function(folder){ %>
 	<% if (folder.get("folderParentID") == "") { %>
 	<li>
-		<a href="<%=folder.route()%>" name="<%=folder.route()%>" data-toggle="collapse" data-target="#menu" class="listFolderItemLink">
+		<a href="<%=folder.route()%>" name="<%=folder.route()%>" data-toggle="collapse" data-target="#menu" class="listFolderMenuItemLink">
 			<span><%=folder.get("folderName")%><% if (folder.get("folderHasChildren") == 1) { %><strong class="badge badge-subfolders"> > </strong><% } %><% if (folder.get("qtdUnreadMessages") != 0) { %><strong class="badge badge-info"><%=folder.get("qtdUnreadMessages")%></strong><% } %>
 				</span>
 		<% if (folder.get("folderType") == 0) { %>
