--- a/templates/settings/settingsSupportListTemplate.html
+++ b/templates/settings/settingsSupportListTemplate.html
@@ -1,14 +1,12 @@
 <h2 class="ellipsis50">Suporte / Sugest&otilde;es</h2>
 <article id="wrapperDetail" class="container">
 	<div id="scrollerDetail">
-
-		<form id="support">
+		<div id="support">
 			<ol>
 				<li>
 					<textarea name="sugestao" id="sugestao" placeholder="Envie suas sugest&otilde;es ou cr&iacute;ticas para o time que administra o Expresso."></textarea>
 				</li>
 			</ol>
-		</form>
-
+		</div>
   	</div>
 </article>
