--- a/templates/contacts/detailsContactTemplate.html
+++ b/templates/contacts/detailsContactTemplate.html
@@ -1,4 +1,20 @@
-<dl id="contactDetails">
+<!-- <div id="picture_contact" class="picture_image" style="margin: 0 10px;"><img src="" class="userPicture" alt="" style="height: 106px; width: 80px;" /></div> -->
+<%
+var contactID = decodeURIComponent(contact.get('contactID'));
+var id;
+
+if (parseInt(contactID) != NaN && parseInt(contactID) % 1 == 0)
+	id = contactID;
+else
+{
+	var queryUID = contactID.split(",")[0]; 
+	var uid = queryUID.split("=");
+	id = uid[1].replace(".", "___");
+}
+%>
+
+<div id="picture_contact_<%= id %>" class="details_picture_image"></div>
+<dl id="contactDetails" style="margin-left: 100px;">
 
 	<% if (!_.isEmpty(contact.get('contactMails'))) { %>
 				
