Closes #9 - Corrigir o scroll para mensagens que ultrapassam o tamanho da tela do smartphone.

--- a/templates/mail/detailMessageTemplate.html
+++ b/templates/mail/detailMessageTemplate.html
@@ -107,7 +107,7 @@
       </tr> 
       <% } %>
       <tr>
-        <td class="itemBody" colspan="3">
+        <td id="contentMessageBody" class="itemBody" colspan="3">
           <%=message.getMessageBody(false)%>
         </td>
       </tr> 
