Issue #9 - Corrige o mesmo BUG que também estava acontecendo na composição de mensagens.

--- a/templates/mail/composeMessageTemplate.html
+++ b/templates/mail/composeMessageTemplate.html
@@ -111,7 +111,7 @@
 	    	
 	    	<tr id="msgBodyRow">
 	    		<td class="itemBody" colspan="2">
-	    			<div id="msgBodyInput" class="messageBodyInput" style="width: 100%;" contenteditable="true"><%=message.getMessageBody(true)%></div>
+	    			<div id="msgBodyInput" class="messageBodyInput" contenteditable="true"><%=message.getMessageBody(true)%></div>
 	    		</td>
 	    	</tr>
 	    </table>
