--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,9 +23,9 @@ body #page .top .topButtons li a { height: 53px; width: 53px; display: block; co
 body #page .main { position: absolute; width: 100%; height: 100%; bottom: 0; }
 body #page .main h2 { border-bottom: 2px solid #437DD6; font-size: 20px; height: 50px; line-height: 50px; padding: 0 0 0 10px; color: #333333; } 
 
-body #page .main #content { width: 40%; height: 100%; position: relative; border-right: 1px solid #E5E5E5; }
+body #page .main #content { width: 40%; height: 100%; position: relative; border-right: 1px solid #E5E5E5; z-index: 10; }
 /*body #page .main #content.full { width: 100% }*/
-body #page .main #content ul { width: 100%; background-color: #FAFAFA; }
+body #page .main #content ul { width: 100%; background-color: #FFFFFF; }
 body #page .main #content ul li { border-bottom: 1px solid #CCCCCC; border-top: 1px solid #FFFFFF; font-size: 14px; height: 60px; color: #000000; text-align: left; }
 body #page .main #content ul li a { display: block; height: 60px; text-decoration: none; }
 body #page .main #content ul li a h3 { color: #0088CC; margin-left: 30px; padding-top: 10px; font-size: 16px; }
@@ -47,7 +47,7 @@ body #page .main #content dl dd ul li input.check { float: right; margin-top: 18
 body #page .main #content dl dd ul li a { text-decoration: none; color: #777777; font-weight: bold; }
 
 
-body #page .main #contentDetail { width: 60%; height: 100%; position: relative; font-size: 19px; margin-right: -1px; }
+body #page .main #contentDetail { width: 60%; height: 100%; position: relative; font-size: 19px; margin-right: -1px; z-index: 11; }
 /*body #page .main #contentDetail #scrollerDetail { padding: 20px; }*/
 body #page .main .container { position: absolute; top: 53px; right: 0; left: 0; bottom: 0; background: none repeat scroll 0 0 #FFFFFF; }
 body.smartphone #page .main #contentDetail { display: none; }
@@ -200,7 +200,7 @@ body form { font-size: 16px; padding: 15px; }
   body form#changePassword ol li input { width: 100%; height: 30px; padding: 5px; }
 
   /** Preferências > Resultados por página **/
-  body #detailList ul { width: 100%; background-color: #FAFAFA; }
+  body #detailList ul { width: 100%; background-color: #FFFFFF; }
   body #detailList ul li { border-bottom: 1px solid #CCCCCC; border-top: 1px solid #FFFFFF; font-size: 14px; height: 60px; color: #000000; text-align: left; }
   body #detailList ul li a { display: block; height: 60px; text-decoration: none; }
   body #detailList ul li a h3 { color: #0088CC; margin-left: 30px; padding-top: 10px; font-size: 16px; }
@@ -453,27 +453,27 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
 
 .msg-attachments {
 	background: url("../imgs/msg-attachments.png") no-repeat scroll 0 0 transparent;
-	background-size: 20px 20px;
-	width: 20px;
-	height: 20px;
+	background-size: 15px 15px;
+	width: 15px;
+	height: 15px;
 	float: right;
 	margin: 5px;
 }
 
 .msg-forwarded {
 	background: url("../imgs/msg-forwarded.png") no-repeat scroll 0 0 transparent;
-	background-size: 20px 20px;
-	width: 20px;
-	height: 20px;
+	background-size: 15px 15px;
+	width: 15px;
+	height: 15px;
 	float: right;
 	margin: 5px;
 }
 
 .msg-flagged {
 	background: url("../imgs/msg-flagged.png") no-repeat scroll 0 0 transparent;
-	background-size: 20px 20px;
-	width: 20px;
-	height: 20px;
+	background-size: 15px 15px;
+	width: 15px;
+	height: 15px;
 	float: right;
 	margin: 5px;
 }
@@ -808,6 +808,28 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
 
 .context-catalogo-pessoal {
   background: url("../imgs/icon-catalogo-pessoal-30x30.png") no-repeat scroll center center;
+}
+
+.btn-catalogo-geral {
+    background: url("../imgs/icon-catalogo-geral-30x30.png") no-repeat scroll center center;
+    background-color: #006DCC;
+    background-repeat: no-repeat;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    color: #FFFFFF;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    min-width: 40px;
+    height: 40px;
+}
+
+.btn-catalogo-pessoal {
+    background: url("../imgs/icon-catalogo-pessoal-30x30.png") no-repeat scroll center center;
+    background-color: #006DCC;
+    background-repeat: no-repeat;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    color: #FFFFFF;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    min-width: 40px;
+    height: 40px;
 }
 
 
