--- a/css/estilo.css
+++ b/css/estilo.css
@@ -755,6 +755,16 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
 
 }
 
+.icon-add-contact-personal {
+  background: url("../imgs/icon-adicionar-contato-pessoal-30x30.png") no-repeat scroll center center;
+
+}
+
+.icon-delete-contact-personal {
+  background: url("../imgs/icon-excluir-contato-pessoal-30x30.png") no-repeat scroll center center;
+
+}
+
 .icon-take-picture {
   background: url("../imgs/icon-tirar-foto-30x30.png") no-repeat scroll center center;
 
