Refactor da rota /Mail/Folders/* para /Mail/Messages/0/0/*
Substituição de todas as chamadas de rotas do /Mail/Folders para
/Mail/Messages/0/0/INBOX - Foi necessário para a implementação da Issue
#17, que após a notificação recebida o aplicativo precisa ser
redirecionado para uma rota específica que carregue o conteúdo da
mensagem. Implementado também o Shared.gotoRoute que força uma rota
específica após o Login.

--- a/templates/mail/messagesListItemsTemplate.html
+++ b/templates/mail/messagesListItemsTemplate.html
@@ -27,8 +27,11 @@
     </a>
   </li>
 <% }); %>
-<% _.each(messages, function(message){ %>
-  <li id="<%=message.listItemID()%>"> 
+<% 
+
+  _.each(messages, function(message){ 
+   %>
+  <li id="<%=message.listItemID()%>" <% if (message.get("msgID") == msgIDSelected) { %>class="selected"<%} %>> 
     <a href="<%=message.route()%>" class="listItemLink">
       <div class="msg-list-images">
         <span class="ellipsis14" style="text-align: right; margin: 5px; font-size: 10px;"><%=message.getTimeAgo()%></span>
