Alterações de CSS e visual, específicas para Desktop.

--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -37,11 +37,6 @@
     <% if (Shared.userHasModule("mail")) { %>
     <dt>Minhas Pastas</dt>
     <dd>
-      <ul id="myFolders">
-        
-      </ul>
-    </dd>
-    <dd>
       <ul id="mainMenu">
       
           <li class="add-folder">
@@ -52,7 +47,17 @@
           </li>
       </ul>
     </dd>
+    <dd>
+      <ul id="myFolders">
+        
+      </ul>
+    </dd>
+    
     <% } %>
+    <div class="menu-footer">
+      Desenvolvido por:<br><br>
+      <div class="company-logo"></div>
+    </div>
   </dl>
 
 </div>
