--- a/templates/master/primaryContentTemplate.html
+++ b/templates/master/primaryContentTemplate.html
@@ -1,4 +1,4 @@
-<h2 id="contentTitle" class="ellipsis50"></h2>
+<h2 id="contentTitle" class="ellipsis50"  style="padding-left: 50px; background-position: 10px;"></h2>
 
 <div class="searchArea">
 	<input type="text" class="searchField" value="" placeholder="Procurar Por:" />
