--- a/templates/settings/settingsAboutListTemplate.html
+++ b/templates/settings/settingsAboutListTemplate.html
@@ -19,7 +19,7 @@
 				- Independ&ecirc;ncia de fornecedor<br>
 				- Independ&ecirc;ncia de plataforma cliente<br>
 				- Independ&ecirc;ncia de plataforma servidor<br>
-				- Mobilidade dos usu&acute;rios<br>
+				- Mobilidade dos usu&aacute;rios<br>
 			</dd>
 
 			<dt>Saiba mais</dt>
