--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,8 +17,10 @@ body #page .smartphone { position: absolute; height: 53px; width: 100%; top: -53
 body #page .topHeader .topButtons li { float: left; }
 body #page .topHeader .topButtons li a { height: 53px; width: 53px; display: block; color: transparent; text-shadow: none; font: 0px/0 a; }
 	.topButtons .menu { background: url("../imgs/menu.png") no-repeat scroll 0 0 transparent; }
+  .topButtons .menu:hover { background: url("../imgs/menu.png") no-repeat scroll 0 0 transparent; background-position: -50px 0px; }
 	.topButtons .voltar { background: url("../imgs/menu.png") no-repeat scroll 0 0 transparent; }
 	.topButtons .contextMenu { background: url("../imgs/context_menu.png") no-repeat scroll 0 0 transparent; }
+  .topButtons .contextMenu:hover { background: url("../imgs/context_menu.png") no-repeat scroll 0 0 transparent; background-position: -56px 0px;  }
 
 body #page .main { position: absolute; width: 100%; height: 100%; bottom: 0; }
 body #page .main h2 { border-bottom: 2px solid #437DD6; font-size: 20px; height: 50px; line-height: 50px; padding: 0 0 0 10px; color: #333333; } 
@@ -27,6 +29,7 @@ body #page .main #content { width: 40%; height: 100%; position: relative; border
 /*body #page .main #content.full { width: 100% }*/
 body #page .main #content ul { width: 100%; background-color: #FFFFFF; }
 body #page .main #content ul li { border-bottom: 1px solid #CCCCCC; border-top: 1px solid #FFFFFF; font-size: 14px; height: 60px; color: #000000; text-align: left; }
+body #page .main #content ul li:hover { background-color: #EFEFEF; }
 body #page .main #content ul li a { display: block; height: 60px; text-decoration: none; }
 body #page .main #content ul li a h3 { color: #0088CC; margin-left: 30px; padding-top: 10px; font-size: 16px; }
 body #page .main #content ul li a span { font-size: 13px; color: #777777; margin: 0 0 0 30px; }
@@ -77,8 +80,20 @@ body #menu dl dd ul li a { height: 32px; color: #CCCCCC; text-decoration: none; 
 body #menu dl dd ul#mainMenu { background-color: #333333; padding: 10px 0; }
 body #menu dl dd ul#mainMenu li.selected { background: transparent url('../imgs/seta.png') no-repeat right 16px; }
 body #menu dl dd ul#mainMenu li.selected a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
+body #menu dl dd ul#mainMenu li:hover a { color: #EFEFEF; border: 1px solid #444444; background-color: #444444; border-radius: 5px 5px 5px 5px; }
+body #menu dl dd ul#mainMenu li.selected:hover a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
 body #menu dl dd ul#mainMenu li a span { float: left; margin-left: 55px; height: 32px; line-height: 32px; vertical-align: top; }
 body #menu dl dd ul#mainMenu li a .icon { width: 40px; height: 32px; }
+
+.menu-footer {
+  background: #FFF;
+  padding-top: 20px;
+  padding-bottom: 50px;
+  font-size: 10px;
+  color: #444444;
+  text-align: center;
+}
+
 .icon-email { 
    border-radius: 5px;
   background: url("../imgs/icon-caixa-entrada-90x72.png") no-repeat scroll center center;
@@ -123,6 +138,10 @@ body #menu dl dd ul#mainMenu li a .icon { width: 40px; height: 32px; }
 
 
 body #menu dl dd ul#myFolders li { border-bottom: 1px #EFEFEF solid; }
+body #menu dl dd ul#myFolders li.selected { background-color: #3960A6; }
+body #menu dl dd ul#myFolders li.selected span { color: #FFFFFF; }
+body #menu dl dd ul#myFolders li:hover { background-color: #AFAFAF; }
+body #menu dl dd ul#myFolders li.selected:hover { background-color: #3960A6; }
 /*body #menu dl dd ul#myFolders li a { height: 32px; text-decoration: none; }*/
 body #menu dl dd ul#myFolders { background-color: #FFF; }
 body #menu dl dd ul#myFolders li a { height: 30px; color: #333333; margin-right: 10px; }
@@ -166,6 +185,10 @@ body #menu dl dd ul#myFolders li a span .badge.badge-info { float: right; }
 
 .folder-trash-full {
   background: url("../imgs/icon-lixeira-cheia-30x30.png") no-repeat scroll center center;
+}
+
+.folder-spam {
+  background: url("../imgs/icon-pasta-spam-30x30.png") no-repeat scroll center center;
 }
 
 .folder-shared {
@@ -943,12 +966,15 @@ body #page .main #agenda .ui-datepicker .ui-datepicker-calendar tr td.ui-datepic
 
 
 .badge-write-message {
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-right: 10px;
-  background-color: #3a87ad;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-right: 5px;
   font-size: 16px;
   line-height: 30px;
+  color: #EFEFEF; 
+  border: 1px solid #CCCCCC; 
+  background-color: #3a87ad; 
+  border-radius: 5px 5px 5px 5px; 
 }
 
 
@@ -1293,6 +1319,30 @@ body #page .main table#messageDetails tr td.itemBody { border-left: 8px solid #3
 .attachment-arquivo-background {
   background: url('../imgs/icon-anexo-arquivo-160x150.png');
 }
+
+.attachment-arquivo-background {
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+ 
+.attachment-arquivo-background:hover {
+  -webkit-transform: rotate(-10deg);
+     -moz-transform: rotate(-10deg);
+       -o-transform: rotate(-10deg);
+      -ms-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
+ 
+.attachment-arquivo-background img:hover {
+  -webkit-filter: blur(5px);
+}
+
+    
+
 
 .recipientmsgTo {
   cursor: pointer;
