--- a/templates/mail/messagesListTemplate.html
+++ b/templates/mail/messagesListTemplate.html
@@ -1,4 +1,41 @@
-<h2 class="ellipsis50"><%=currentFolder.get("folderName")%></h2>
+<%
+
+var folderClass = "folder-blue";
+
+if (currentFolder.get("folderType") == 0) {
+	folderClass = "folder-inbox";
+}
+
+if (currentFolder.get("folderType") == 4) {
+	folderClass = "folder-drafts";
+}
+
+if (currentFolder.get("folderType") == 1) {
+	folderClass = "folder-sent";
+}
+
+if (currentFolder.get("folderType") == 2) {
+	folderClass = "folder-spam";
+}
+
+if (currentFolder.get("folderType") == 3) {
+	if (currentFolder.get("qtdMessages") == "0") { 
+		folderClass = "folder-trash";
+	} else {
+		folderClass = "folder-trash-full";
+	}	
+}
+
+if (currentFolder.get("folderType") == 5) {
+	folderClass = "folder-blue";
+}
+
+if (currentFolder.get("folderType") == 6) {
+	folderClass = "folder-shared";
+}
+
+%>
+<h2 class="ellipsis50 <%=folderClass%>" style="padding-left: 50px; background-position: 10px;"><%=currentFolder.get("folderName")%></h2>
 <div class="searchArea">
   <input id="searchField" type="text" value="" placeholder="Procurar Por:" />
 </div>
